Endpoint pregunta/id/respuestas
