# Gex.NetCore/Controllers/PreguntaController.cs
@@ -18,11 +18,13 @@ namespace Gex.Controllers;
 [ApiController]
 public class PreguntaController : ControllerBase
 {
-    private readonly IPreguntaService _service;
+    private readonly IPreguntaService _preguntaService;
+    private readonly IRespuestaService _respuestaService;
 
-    public PreguntaController(IPreguntaService service)
+    public PreguntaController(IPreguntaService service, IRespuestaService respuestaService)
     {
-        _service = service;
+        _preguntaService = service;
+        _respuestaService = respuestaService;
     }
 
     [HttpGet]
@@ -31,7 +33,7 @@ public class PreguntaController : ControllerBase
     [Authorize(Roles = nameof(UsuarioTipo.Alumno))]
     public async Task<ActionResult<GexResult<ICollection<PreguntaResponse>>>> GetAll()
     {
-        var preguntas = await _service.GetPreguntasAsync();
+        var preguntas = await _preguntaService.GetPreguntasAsync();
 
         if (!preguntas.Success)
             return StatusCode(ResponseHelper.GetHttpError(preguntas.ErrorCode), preguntas);
@@ -45,13 +47,28 @@ public class PreguntaController : ControllerBase
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     public async Task<ActionResult<GexResult<PreguntaResponse>>> Get(int id)
     {
-        var pregunta = await _service.GetPreguntaAsync(id);
+        var pregunta = await _preguntaService.GetPreguntaAsync(id);
 
         if (!pregunta.Success)
             return StatusCode(ResponseHelper.GetHttpError(pregunta.ErrorCode), pregunta);
 
         return Ok(pregunta);
     }
+
+    [HttpGet("{preguntaId:int}/respuestas")]
+    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GexResult<ICollection<RespuestaResponse>>))]
+    [ProducesResponseType(StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(StatusCodes.Status404NotFound)]
+    public async Task<ActionResult<GexResult<ICollection<RespuestaResponse>>>> GetRespuestas(int preguntaId)
+    {
+        var respuestas = await _respuestaService.GetRespuestasByPreguntaIdAsync(preguntaId);
+
+        if (!respuestas.Success)
+            return StatusCode(ResponseHelper.GetHttpError(respuestas.ErrorCode), respuestas);
+
+        return Ok(respuestas);
+    }
+
     /*
     [HttpPost]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GexResult<PreguntaResponse>))]
@@ -79,7 +96,7 @@ public class PreguntaController : ControllerBase
     [ProducesResponseType(StatusCodes.Status201Created)]
     public async Task<ActionResult<GexResult<PreguntaResponse>>> CreatePregunta([FromBody] PreguntaRequest preguntaDto)
     {
-        var pregunta = await _service.CreatePreguntaAsync(preguntaDto);
+        var pregunta = await _preguntaService.CreatePreguntaAsync(preguntaDto);
         if (!pregunta.Success)
             return StatusCode(ResponseHelper.GetHttpError(pregunta.ErrorCode), pregunta);
         return Ok(pregunta);
@@ -89,7 +106,7 @@ public class PreguntaController : ControllerBase
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GexResult<PreguntaResponse>))]
     public async Task<ActionResult<GexResult<PreguntaResponse>>> UpdatePregunta([FromBody] PreguntaRequest preguntaDto)
     {
-        var pregunta = await _service.UpdatePreguntaAsync(preguntaDto);
+        var pregunta = await _preguntaService.UpdatePreguntaAsync(preguntaDto);
 
         if (!pregunta.Success)
             return StatusCode(ResponseHelper.GetHttpError(pregunta.ErrorCode), pregunta);
@@ -100,11 +117,13 @@ public class PreguntaController : ControllerBase
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GexResult<PreguntaResponse>))]
     public async Task<ActionResult<GexResult<PreguntaResponse>>> DeletePregunta(int id)
     {
-        var pregunta = await _service.DeletePreguntaAsync(id);
+        var pregunta = await _preguntaService.DeletePreguntaAsync(id);
 
         if (!pregunta.Success)
             return StatusCode(ResponseHelper.GetHttpError(pregunta.ErrorCode), pregunta);
         return Ok(pregunta);
     }
+
+
 
 }
